[gd_scene load_steps=8 format=3 uid="uid://d3tkk3ip5don2"]

[ext_resource type="Script" path="res://Scripts/urchin.gd" id="1_w8555"]
[ext_resource type="Texture2D" uid="uid://bifvgd77gnbpw" path="res://Sprites/oursin128.png" id="2_qt6tr"]
[ext_resource type="AudioStream" uid="uid://cmvqxim5y7j1x" path="res://SFX/Sounds/531704__rickplayer__underwatersound.mp3" id="3_pdrwj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m65ul"]
radius = 21.0238

[sub_resource type="Animation" id="Animation_n74v0"]
resource_name = "idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3uh6x"]
_data = {
"idle": SubResource("Animation_n74v0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_p4mhb"]
radius = 26.0

[node name="Urchin" type="CharacterBody2D"]
script = ExtResource("1_w8555")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_m65ul")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qt6tr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3uh6x")
}

[node name="RangeAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeAttack"]
shape = SubResource("CircleShape2D_p4mhb")

[node name="TimerAttack" type="Timer" parent="."]

[node name="AudioNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pdrwj")
volume_db = -10.0
autoplay = true
attenuation = 18.0
panning_strength = 1.5
bus = &"SFX"

[connection signal="body_entered" from="RangeAttack" to="." method="_on_range_attack_body_entered"]
[connection signal="body_exited" from="RangeAttack" to="." method="_on_range_attack_body_exited"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_timer_attack_timeout"]
